# cmake-project-template

./: CMakeLists.txt
apps/: CMakeLists.txt  main.cc
template_lib/: CMakeLists.txt  utils.cc  utils.h
template_lib/test/: CMakeLists.txt  utils_test.cc
